Update styles for overriding .screen-reader-text for media remove link

--- a/assets/css/term-media.css
+++ b/assets/css/term-media.css
@@ -40,6 +40,8 @@ tr:hover .wp-term-media:not(.has-image) .wp-term-media-remove,
 tr:hover .wp-term-media:not(.has-image) .wp-term-media-remove .screen-reader-text,
 .wp-term-media:not(.has-image) .wp-term-media-remove:focus .screen-reader-text {
 	position: static !important; /* Overrule .screen-reader-text's absolute !important */
+	clip-path: initial;
+	margin: auto;
 }
 
 .wp-term-media.has-image .wp-term-media-remove {
